Rename ImageProvider to ImageHelper. - Add metadata.json files for config and images.

--- a/CrossoutLogViewer.GUI/Controls/UsersListControl.xaml
+++ b/CrossoutLogViewer.GUI/Controls/UsersListControl.xaml
@@ -23,14 +23,14 @@
         <StackPanel Orientation="Horizontal"
                     VerticalAlignment="Center"
                     Grid.Row="2">
-            <TextBlock Text="Name"
+            <TextBlock Text="Names"
                        Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
                        Margin="0,0,4,0"
                        VerticalAlignment="Center" />
             <TextBox Text="{Binding FilterUserName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                     Width="150"
+                     Width="300"
                      Controls:TextBoxHelper.AutoWatermark="True"
-                     Controls:TextBoxHelper.Watermark="Nickname"
+                     Controls:TextBoxHelper.Watermark="Name1|Name2|Name3"
                      Controls:TextBoxHelper.ClearTextButton="True" />
         </StackPanel>
         <local:UserDataGrid x:Name="UserListViewUsers"
