--- a/CrossoutLogViewer.GUI/Controls/SessionCalendar/SessionCalendar.xaml
+++ b/CrossoutLogViewer.GUI/Controls/SessionCalendar/SessionCalendar.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:CrossoutLogView.GUI.Controls.SessionCalendar"
              xmlns:IconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
-             Height="398"
+             Height="auto"
              Width="610"
              d:DesignHeight="450" d:DesignWidth="800"
              Loaded="UserControl_Loaded">
