--- a/CrossoutLogViewer.GUI/Controls/SessionCalendar/SessionCalendar.xaml
+++ b/CrossoutLogViewer.GUI/Controls/SessionCalendar/SessionCalendar.xaml
@@ -5,9 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:CrossoutLogView.GUI.Controls.SessionCalendar"
              xmlns:IconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              Height="auto"
-             Width="610"
+             Width="auto"
+             MinHeight="395"
+             MinWidth="605"
              d:DesignHeight="450" d:DesignWidth="800"
              Loaded="UserControl_Loaded">
     <Grid Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
@@ -19,9 +21,10 @@
             <Button x:Name="Button_PreviousMonth"
                     Style="{DynamicResource Button.Circle}"
                     Foreground="{DynamicResource MahApps.Brushes.ThemeBackground}"
+                    Click="Button_PreviousMonth_Click"
                     Width="26"
                     Height="26"
-                    Click="Button_PreviousMonth_Click">
+                    Margin="0,4,0,0">
                 <IconPacks:Modern Kind="ChevronLeft"
                                   Width="14"
                                   Height="14" />
@@ -29,9 +32,10 @@
             <Button x:Name="Button_NextMonth"
                     Style="{DynamicResource Button.Circle}"
                     Foreground="{DynamicResource MahApps.Brushes.ThemeBackground}"
+                    Click="Button_NextMonth_Click"
                     Width="26"
                     Height="26"
-                    Click="Button_NextMonth_Click">
+                    Margin="0,4,4,0">
                 <IconPacks:Modern Kind="ChevronRight"
                                   Width="14"
                                   Height="14" />
